# Nibble

./: .clang-format  .gitignore  CMakeLists.txt  README.md
scripts/: test.sh
src/: Makefile  bitboard.c  bitboard.h  board.c  board.h  eval.c  eval.h  magics.c  magics.h  move.c  move.h  movegen.c  movegen.h  movesort.c  movesort.h  nibble.c  perft.c  perft.h  piece.c  piece.h  psqt.c  psqt.h  search.c  search.h  types.h  uci.c  uci.h  util.c  util.h
